kubernetes/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-rewriter
  namespace: kube-system
  labels:
    app: registry-rewriter
    mutateimagename: never
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-rewriter
  template:
    metadata:
      labels:
        app: registry-rewriter
    spec:
      containers:
      - name: nginxhttps
        image: library/nginx:1.15
        ports:
        - containerPort: 443
          name: https
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: tls
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume
        livenessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
      - name: webhook
        image: lawrencegripper/imagenamemutatingcontroller:12
      volumes:
      - name: tls
      - name: configmap-volume
        configMap:
          name: registry-rewriter-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: registry-rewriter-service
  namespace: kube-system
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: https
  selector:
    app: registry-rewriter
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: registry-rewriter
webhooks:
- clientConfig:
    service:
      namespace: kube-system
      name: registry-rewriter-service
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV5RENDQXJDZ0F3SUJBZ0lSQUlnSG8zd3VpZXgvcVJ0K2pwTlBTOTB3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTVRnd09ESXdNRGd3TVRNd1doY05NakF3T0RFNU1EZ3dNVE13V2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FpSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBSmt6CkhlMWoyRHJzS09WSHdPaHI4MFRaRlZDU3owZXU3c3hMKzJNVlVwMTVJM0hHQUVkVUlyYzI5QnY0bHhqMWN6d1EKT25EVmxWSXBvWUhGdmJ4TUovWjEvZXRhTkFsSHdiV1V4YlYwaXd1N0dCcVpPT1FOYUpTc29Td2xVUEJYeXYvegpCUjFpRS9LbVRQYn [...]
  failurePolicy: Fail
  name: registry-rewriter-service.kube-system.svc
  namespaceSelector:
    matchExpressions:
      - key: mutateimagename
        operator: NotIn
        values: [never]
  rules:
  - apiGroups:
    - apps
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
